# visualization_brubotics

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: visual.yaml
data/: f450.xml
include/: visual.h
launch/: load_robot.launch  rviz.launch  sphere.launch  visual.launch
launch/rviz_interface/: rviz_interface.launch  rviz_nav_goal.launch
meshes/: CylinderShell_0.001mm.stl  CylinderShell_10mm.stl  CylinderShell_1mm.stl  HemisphereShell_0.001mm.stl  HemisphereShell_10mm.stl  HemisphereShell_1mm.stl  hemisphere1.stl
msg/: Tube.msg
rviz/: avoidance_test.rviz  default_simulation.rviz
src/: sphere.cpp  visual.cpp  visual2.cpp  visual_main.cpp  visual_test.cpp
src/rviz_interface/: nav_goal.cpp
